--- a/web1/index.html
+++ b/web1/index.html
@@ -71,8 +71,19 @@
     </div>
 
     <div class="main_flex-container ">
-        <div class="slider">
-            <img class="slider_img" src="seurs/24359364107_152b0152ff_k.jpg">
+        <div class="sidbar">
+
+            <div class="slider">
+                <img class="slider_img" src="seurs/24359364107_152b0152ff_k.jpg">
+
+            </div>
+            <div class="main_sid main_flex-container">
+                <div class="side_text side_text1" >Some text</div>
+                <div class="side_text side_text2">Some text</div>
+                <button >Some text</button>
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
 
         <div class="text_ifo">
@@ -205,7 +216,7 @@
                     <div class="s_flex-container margin_top">
                         <div class="litl_img"></div>
                         <div class="">
-                          <b>Some text </b>Some textSome text Some text Some text
+                            <b>Some text </b>Some textSome text Some text Some text
                         </div>
                     </div>
                     <div class="s_flex-container margin_top">
